--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           >
           <ul class="nav-list">
             <li class="nav-item">
-              <a class="nav-link" href="./index.html">Studio</a>
+              <a class="nav-link current" href="./index.html">Studio</a>
             </li>
             <li class="nav-item"><a class="nav-link" href="">Portfolio</a></li>
             <li class="nav-item"><a class="nav-link" href="">Contacts</a></li>
@@ -70,6 +70,11 @@
           <h2 class="description-title">Benefits title</h2>
           <ul class="description-list">
             <li class="description-list-item">
+              <div class="icon-description-list">
+                <svg class="icon-description" width="64" height="64">
+                  <use href="./images/icons.svg#antenna"></use>
+                </svg>
+              </div>
               <h3 class="description-item-title">Strategy</h3>
               <p class="description-item-text">
                 Our goal is to identify the business problem to walk away with
@@ -77,6 +82,11 @@
               </p>
             </li>
             <li class="description-list-item">
+              <div class="icon-description-list">
+                <svg class="icon-description" width="64" height="64">
+                  <use href="./images/icons.svg#clock"></use>
+                </svg>
+              </div>
               <h3 class="description-item-title">Punctuality</h3>
               <p class="description-item-text">
                 Bring the key message to the brand's audience for the best price
@@ -84,6 +94,11 @@
               </p>
             </li>
             <li class="description-list-item">
+              <div class="icon-description-list">
+                <svg class="icon-description" width="64" height="64">
+                  <use href="./images/icons.svg#diagram"></use>
+                </svg>
+              </div>
               <h3 class="description-item-title">Diligence</h3>
               <p class="description-item-text">
                 Research and confirm brands with the strongest digital growth
@@ -91,6 +106,11 @@
               </p>
             </li>
             <li class="description-list-item">
+              <div class="icon-description-list">
+                <svg class="icon-description" width="64" height="64">
+                  <use href="./images/icons.svg#astronaut"></use>
+                </svg>
+              </div>
               <h3 class="description-item-title">Technologies</h3>
               <p class="description-item-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -118,6 +138,36 @@
               <div class="team-content">
                 <h3 class="team-item-title">Mark Guerrero</h3>
                 <p class="team-item-text">Product Designer</p>
+                <ul class="icon-list">
+                  <li class="icon-item">
+                    <a href="#" class="icon-lin">
+                      <svg class="icon" width="24" heigh="24">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a href="#" class="icon-lin">
+                      <svg class="icon" width="24" heigh="24">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a href="#" class="icon-lin">
+                      <svg class="icon" width="24" heigh="24">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a href="#" class="icon-lin">
+                      <svg class="icon" width="24" heigh="24">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list-item">
@@ -131,6 +181,36 @@
               <div class="team-content">
                 <h3 class="team-item-title">Tom Ford</h3>
                 <p class="team-item-text">Frontend Developer</p>
+                <ul class="icon-list">
+                  <li class="icon-item">
+                    <a href="#" class="icon-lin">
+                      <svg class="icon" width="24" heigh="24">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a href="#" class="icon-lin">
+                      <svg class="icon" width="24" heigh="24">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a href="#" class="icon-lin">
+                      <svg class="icon" width="24" heigh="24">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a href="#" class="icon-lin">
+                      <svg class="icon" width="24" heigh="24">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list-item">
@@ -144,6 +224,36 @@
               <div class="team-content">
                 <h3 class="team-item-title">Camila Garcia</h3>
                 <p class="team-item-text">Marketing</p>
+                <ul class="icon-list">
+                  <li class="icon-item">
+                    <a href="#" class="icon-lin">
+                      <svg class="icon" width="24" heigh="24">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a href="#" class="icon-lin">
+                      <svg class="icon" width="24" heigh="24">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a href="#" class="icon-lin">
+                      <svg class="icon" width="24" heigh="24">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a href="#" class="icon-lin">
+                      <svg class="icon" width="24" heigh="24">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list-item">
@@ -157,6 +267,36 @@
               <div class="team-content">
                 <h3 class="team-item-title">Daniel Wilson</h3>
                 <p class="team-item-text">UI Designer</p>
+                <ul class="icon-list">
+                  <li class="icon-item">
+                    <a href="#" class="icon-lin">
+                      <svg class="icon" width="24" heigh="24">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a href="#" class="icon-lin">
+                      <svg class="icon" width="24" heigh="24">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a href="#" class="icon-lin">
+                      <svg class="icon" width="24" heigh="24">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a href="#" class="icon-lin">
+                      <svg class="icon" width="24" heigh="24">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
