--- a/index.html
+++ b/index.html
@@ -141,28 +141,28 @@
                 <ul class="icon-list">
                   <li class="icon-item">
                     <a href="#" class="icon-lin">
-                      <svg class="icon" width="24" heigh="24">
+                      <svg class="icon" width="16" heigh="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
                     <a href="#" class="icon-lin">
-                      <svg class="icon" width="24" heigh="24">
+                      <svg class="icon" width="16" heigh="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
                     <a href="#" class="icon-lin">
-                      <svg class="icon" width="24" heigh="24">
+                      <svg class="icon" width="16" heigh="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
                     <a href="#" class="icon-lin">
-                      <svg class="icon" width="24" heigh="24">
+                      <svg class="icon" width="16" heigh="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -184,28 +184,28 @@
                 <ul class="icon-list">
                   <li class="icon-item">
                     <a href="#" class="icon-lin">
-                      <svg class="icon" width="24" heigh="24">
+                      <svg class="icon" width="16" heigh="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
                     <a href="#" class="icon-lin">
-                      <svg class="icon" width="24" heigh="24">
+                      <svg class="icon" width="16" heigh="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
                     <a href="#" class="icon-lin">
-                      <svg class="icon" width="24" heigh="24">
+                      <svg class="icon" width="16" heigh="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
                     <a href="#" class="icon-lin">
-                      <svg class="icon" width="24" heigh="24">
+                      <svg class="icon" width="16" heigh="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -227,28 +227,28 @@
                 <ul class="icon-list">
                   <li class="icon-item">
                     <a href="#" class="icon-lin">
-                      <svg class="icon" width="24" heigh="24">
+                      <svg class="icon" width="16" heigh="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
                     <a href="#" class="icon-lin">
-                      <svg class="icon" width="24" heigh="24">
+                      <svg class="icon" width="16" heigh="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
                     <a href="#" class="icon-lin">
-                      <svg class="icon" width="24" heigh="24">
+                      <svg class="icon" width="16" heigh="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
                     <a href="#" class="icon-lin">
-                      <svg class="icon" width="24" heigh="24">
+                      <svg class="icon" width="16" heigh="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -270,28 +270,28 @@
                 <ul class="icon-list">
                   <li class="icon-item">
                     <a href="#" class="icon-lin">
-                      <svg class="icon" width="24" heigh="24">
+                      <svg class="icon" width="16" heigh="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
                     <a href="#" class="icon-lin">
-                      <svg class="icon" width="24" heigh="24">
+                      <svg class="icon" width="16" heigh="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
                     <a href="#" class="icon-lin">
-                      <svg class="icon" width="24" heigh="24">
+                      <svg class="icon" width="16" heigh="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
                     <a href="#" class="icon-lin">
-                      <svg class="icon" width="24" heigh="24">
+                      <svg class="icon" width="16" heigh="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -310,13 +310,20 @@
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-list-item">
-              <img
-                class="portfolio-img"
-                src="./images/portfolio-booklets.jpg"
-                alt="Banking App"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-block">
+                <img
+                  class="portfolio-img"
+                  src="./images/portfolio-booklets.jpg"
+                  alt="Banking App"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-content">
                 <h3 class="portfolio-item-title">Banking App</h3>
                 <p class="portfolio-item-text">App</p>
@@ -394,14 +401,49 @@
     </main>
 
     <footer class="page-footer">
-      <div class="container">
-        <a class="logo footer-logo" href="./index.html"
-          >Web<span class="logo-part">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-container">
+        <div>
+          <a class="logo footer-logo" href="./index.html"
+            >Web<span class="logo-part">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-container-social">
+          <p class="footer-Social-text">Social media</p>
+          <ul class="icons-footer">
+            <li class="icon-item-footer">
+              <a href="#" class="icon-lin-footer">
+                <svg class="icon-footer" width="24" heigh="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-item-footer">
+              <a href="#" class="icon-lin-footer">
+                <svg class="icon-footer" width="24" heigh="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-item-footer">
+              <a href="#" class="icon-lin-footer">
+                <svg class="icon-footer" width="24" heigh="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-item-footer">
+              <a href="#" class="icon-lin-footer">
+                <svg class="icon-footer" width="24" heigh="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
