--- a/index.html
+++ b/index.html
@@ -141,28 +141,28 @@
                 <ul class="icon-list">
                   <li class="icon-item">
                     <a href="#" class="icon-lin">
-                      <svg class="icon" width="16" heigh="16">
+                      <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
                     <a href="#" class="icon-lin">
-                      <svg class="icon" width="16" heigh="16">
+                      <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
                     <a href="#" class="icon-lin">
-                      <svg class="icon" width="16" heigh="16">
+                      <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
                     <a href="#" class="icon-lin">
-                      <svg class="icon" width="16" heigh="16">
+                      <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -330,65 +330,105 @@
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                class="portfolio-img"
-                src="./images/portfolio-phonepay.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-block">
+                <img
+                  class="portfolio-img"
+                  src="./images/portfolio-phonepay.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+
               <div class="portfolio-content">
                 <h3 class="portfolio-item-title">Cashless Payment</h3>
                 <p class="portfolio-item-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                class="portfolio-img"
-                src="./images/portfolio-laptop.jpg"
-                alt="Meditation App"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-block">
+                <img
+                  class="portfolio-img"
+                  src="./images/portfolio-laptop.jpg"
+                  alt="Meditation App"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+
               <div class="portfolio-content">
                 <h3 class="portfolio-item-title">Meditation App</h3>
                 <p class="portfolio-item-text">App</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                class="portfolio-img"
-                src="./images/portfolio-car.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-block">
+                <img
+                  class="portfolio-img"
+                  src="./images/portfolio-car.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+
               <div class="portfolio-content">
                 <h3 class="portfolio-item-title">Taxi Service</h3>
                 <p class="portfolio-item-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                class="portfolio-img"
-                src="./images/portfolio-phone.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-block">
+                <img
+                  class="portfolio-img"
+                  src="./images/portfolio-phone.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+
               <div class="portfolio-content">
                 <h3 class="portfolio-item-title">Screen Illustrations</h3>
                 <p class="portfolio-item-text">Design</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                class="portfolio-img"
-                src="./images/portfolio-girl.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-block">
+                <img
+                  class="portfolio-img"
+                  src="./images/portfolio-girl.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+
               <div class="portfolio-content">
                 <h3 class="portfolio-item-title">Online Courses</h3>
                 <p class="portfolio-item-text">Marketing</p>
@@ -402,7 +442,7 @@
 
     <footer class="page-footer">
       <div class="container footer-container">
-        <div>
+        <div class="container-logo">
           <a class="logo footer-logo" href="./index.html"
             >Web<span class="logo-part">Studio</span></a
           >
@@ -416,28 +456,28 @@
           <ul class="icons-footer">
             <li class="icon-item-footer">
               <a href="#" class="icon-lin-footer">
-                <svg class="icon-footer" width="24" heigh="24">
+                <svg class="icon-footer" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="icon-item-footer">
               <a href="#" class="icon-lin-footer">
-                <svg class="icon-footer" width="24" heigh="24">
+                <svg class="icon-footer" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="icon-item-footer">
               <a href="#" class="icon-lin-footer">
-                <svg class="icon-footer" width="24" heigh="24">
+                <svg class="icon-footer" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="icon-item-footer">
               <a href="#" class="icon-lin-footer">
-                <svg class="icon-footer" width="24" heigh="24">
+                <svg class="icon-footer" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
