--- a/index.html
+++ b/index.html
@@ -184,28 +184,28 @@
                 <ul class="icon-list">
                   <li class="icon-item">
                     <a href="#" class="icon-lin">
-                      <svg class="icon" width="16" heigh="16">
+                      <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
                     <a href="#" class="icon-lin">
-                      <svg class="icon" width="16" heigh="16">
+                      <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
                     <a href="#" class="icon-lin">
-                      <svg class="icon" width="16" heigh="16">
+                      <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
                     <a href="#" class="icon-lin">
-                      <svg class="icon" width="16" heigh="16">
+                      <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -227,28 +227,28 @@
                 <ul class="icon-list">
                   <li class="icon-item">
                     <a href="#" class="icon-lin">
-                      <svg class="icon" width="16" heigh="16">
+                      <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
                     <a href="#" class="icon-lin">
-                      <svg class="icon" width="16" heigh="16">
+                      <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
                     <a href="#" class="icon-lin">
-                      <svg class="icon" width="16" heigh="16">
+                      <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
                     <a href="#" class="icon-lin">
-                      <svg class="icon" width="16" heigh="16">
+                      <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -270,28 +270,28 @@
                 <ul class="icon-list">
                   <li class="icon-item">
                     <a href="#" class="icon-lin">
-                      <svg class="icon" width="16" heigh="16">
+                      <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
                     <a href="#" class="icon-lin">
-                      <svg class="icon" width="16" heigh="16">
+                      <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
                     <a href="#" class="icon-lin">
-                      <svg class="icon" width="16" heigh="16">
+                      <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
                     <a href="#" class="icon-lin">
-                      <svg class="icon" width="16" heigh="16">
+                      <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
