--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
           </p>
         </div>
         <div class="footer-container-social">
-          <p class="footer-Social-text">Social media</p>
+          <p class="footer-social-text">Social media</p>
           <ul class="icons-footer">
             <li class="icon-item-footer">
               <a href="#" class="icon-lin-footer">
